Archive2/0a/f84aedf55b090f/output
main.cpp: In function 'int main()':
main.cpp:34:20: error: call of overloaded 'complex(Foo<double>&)' is ambiguous
     cplx z = cplx(a);
                    ^
main.cpp:34:20: note: candidates are:
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.0/complex:1502:3: note: constexpr std::complex<double>::complex(const std::complex<long double>&)
   complex<double>::complex(const complex<long double>& __z)
   ^
/usr/local/include/c++/4.9.0/complex:1209:26: note: constexpr std::complex<double>::complex(const std::complex<float>&)
       _GLIBCXX_CONSTEXPR complex(const complex<float>& __z)
                          ^
/usr/local/include/c++/4.9.0/complex:1199:26: note: constexpr std::complex<double>::complex(double, double)
       _GLIBCXX_CONSTEXPR complex(double __r = 0.0, double __i = 0.0)
                          ^
/usr/local/include/c++/4.9.0/complex:1197:26: note: constexpr std::complex<double>::complex(std::complex<double>::_ComplexT)
       _GLIBCXX_CONSTEXPR complex(_ComplexT __z) : _M_value(__z) { }
                          ^
/usr/local/include/c++/4.9.0/complex:1192:12: note: constexpr std::complex<double>::complex(const std::complex<double>&)
     struct complex<double>
            ^
/usr/local/include/c++/4.9.0/complex:1192:12: note: constexpr std::complex<double>::complex(std::complex<double>&&)
main.cpp:30:9: warning: unused variable 'i' [-Wunused-variable]
     int i = 2 + (int)a; 
         ^
main.cpp:34:10: warning: unused variable 'z' [-Wunused-variable]
     cplx z = cplx(a);
          ^
